[package]
name = "g-k-crates-io-client"
version = "0.27.1"
edition = "2018"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT OR Apache-2.0"
description = """
A fork of the crates-io package:
Helpers for interacting with crates.io
"""

[lib]
name = "g_k_crates_io_client"
path = "lib.rs"

[dependencies]
curl = "0.4"
failure = "0.1.1"
http = "0.1"
serde = { version = "1.0", features = ['derive'] }
serde_derive = "1.0"
serde_json = "1.0"
url = "1.0"
